--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     time: "21:00"
   open-pull-requests-limit: 10
   reviewers:
-  - DIYgod
+  - vzrenggamani
   labels:
   - dependencies
   ignore:
