--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "RSSHub",
-    "description": "万物皆可 RSS",
-    "repository": "https://github.com/DIYgod/RSSHub",
+    "name": "RSS Mirroring",
+    "description": "RSS Mirroring",
+    "repository": "https://github.com/vzrenggamani/RSSHub",
     "website": "https://docs.rsshub.app/",
-    "logo": "https://i.loli.net/2019/04/23/5cbeb7e41414c.png",
+    "logo": "",
     "keywords": ["RSS"],
     "env": {
         "NODE_MODULES_CACHE": {
